--- a/static/css/blog-docs.less
+++ b/static/css/blog-docs.less
@@ -59,11 +59,11 @@
                     Consumer information
                 </a>
             </div>
-            <div class="summary">
+            <a class="summary" href="#">
                 <h1 class="summary_header">Preventing illegal discrimination in auto lending</h1>
                 <p class="summary_text">Every year, millions of American families buy a car – and it will be one of the most significant purchases they make. One key priority for us is protecting consumers from the silent pickpocket of discrimination.</p>
                 <p class="summary_byline">By Patrice Ficklin</p>
-            </div>
+            </a>
         </article>
     - name: Post preview (with image)
       codenotes:
@@ -89,7 +89,7 @@
                     Consumer information
                 </a>
             </div>
-            <div class="media-object">
+            <a class="media-object" href="#">
                 <div class="media-object_image-container">
                     <img class="media-object_image" src="http://placekitten.com/290/155" alt="">
                 </div>
@@ -106,7 +106,7 @@
                         By Patrice Ficklin
                     </p>
                 </div>
-            </div>
+            </a>
         </article>
   tags:
     - cfgov-blog-docs
