--- a/static/css/main.ie.css
+++ b/static/css/main.ie.css
@@ -4804,11 +4804,11 @@ a.focus .summary_header {
                     Consumer information
                 </a>
             </div>
-            <div class="summary">
+            <a class="summary" href="#">
                 <h1 class="summary_header">Preventing illegal discrimination in auto lending</h1>
                 <p class="summary_text">Every year, millions of American families buy a car – and it will be one of the most significant purchases they make. One key priority for us is protecting consumers from the silent pickpocket of discrimination.</p>
                 <p class="summary_byline">By Patrice Ficklin</p>
-            </div>
+            </a>
         </article>
     - name: Post preview (with image)
       codenotes:
@@ -4834,7 +4834,7 @@ a.focus .summary_header {
                     Consumer information
                 </a>
             </div>
-            <div class="media-object">
+            <a class="media-object" href="#">
                 <div class="media-object_image-container">
                     <img class="media-object_image" src="http://placekitten.com/290/155" alt="">
                 </div>
@@ -4851,7 +4851,7 @@ a.focus .summary_header {
                         By Patrice Ficklin
                     </p>
                 </div>
-            </div>
+            </a>
         </article>
   tags:
     - cfgov-blog-docs
