--- a/static/css/main.css
+++ b/static/css/main.css
@@ -7515,6 +7515,18 @@ a.category-slug.active {
 /* topdoc
   name: Custom checkboxes and radio buttons via jquery.custom-input
   family: cfgov-misc
+  notes:
+    - "This plugin auto-initiates and will transform your initial HTML by adding
+      more markup and classes. If JavaScript is unavailable the new elements and
+      classes won't be added and won't interfere with default input behavior."
+    - "You MUST wrap your input.custom-input in a label."
+    - "Remember to use 'for' and 'id' attributes. This will allow IE less
+      than 8 to trigger the input on label click."
+    - "JavaScript is used to add .is-hovered and .is-focused classes to
+      .custom-input by detecting :hover and :focus on .custom-input."
+    - "JavaScript is used to detect change events to the input. By clicking
+      the label element you change the checked property and the plugin will
+      add the .is-checked class."
   patterns:
     - name: Custom checkbox demo with initialization markup
       markup: |
@@ -7554,19 +7566,7 @@ a.category-slug.active {
           label
             input[type=checkbox].custom-input
       notes:
-        - "Use the markup structure above to add .custom-input elements.
-          It is meant to allow for cases where JavaScript is unavailable.
-          The jQuery plugin transforms this initial HTML by adding more markup
-          and classes. If JavaScript is unavailable the new elements and classes
-          won't be added and won't interfere with default input behavior."
-        - "You MUST wrap input[type=checkbox].custom-input in a label."
-        - "Remember to use for and id attributes. This will allow IE less than 8
-          to trigger the input on label click."
-        - "JavaScript is used to add .is-hovered and .is-focused classes to
-          .custom-input by detecting :hover and :focus on .custom-input."
-        - "JavaScript is used to detect change events to the input. By clicking
-          the label element you change the checked property and the plugin will
-          add the .is-checked class."
+        - "Use the markup structure above to add .custom-input elements."
     - name: Custom radio button demo with initialization markup
       markup: |
         <label class="form-label"
@@ -7605,36 +7605,14 @@ a.category-slug.active {
           label
             input[type=radio].custom-input
       notes:
-        - "Use the markup structure above to add .custom-input elements.
-          It is meant to allow for cases where JavaScript is unavailable.
-          The jQuery plugin transforms this initial HTML by adding more markup
-          and classes. If JavaScript is unavailable the new elements and classes
-          won't be added and won't interfere with default input behavior."
-        - "You MUST wrap input[type=radio].custom-input in a label."
-        - "Remember to use for and id attributes. This will allow IE less than 8
-          to trigger the input on label click."
-        - "JavaScript is used to add .is-hovered and .is-focused classes to
-          .custom-input by detecting :hover and :focus on .custom-input."
-        - "JavaScript is used to detect change events to the input. By clicking
-          the label element you change the checked property and the plugin will
-          add the .is-checked class."
+        - "Use the markup structure above to add .custom-input elements."
     - name: JavaScript setup
       markup: |
         <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
         <script src="../../static/js/jquery.custom-input.js"></script>
-      notes:
-        - "The jQuery plugin will auto intitiate all input[type=checkbox] and
-          input[type=radio] elements with the class of .custom-input and append
-          the the .is-enabled class which activates the styling."
   tags:
     - cfgov-misc
 */
-.custom-input.is-enabled {
-  display: block;
-  position: relative;
-  margin-right: 0.375em;
-  padding: 0 0 0 1.25em;
-}
 .custom-input_input {
   position: absolute;
   top: 4px;
@@ -7649,8 +7627,8 @@ a.category-slug.active {
   -moz-box-sizing: border-box;
   box-sizing: border-box;
   position: absolute;
-  top: 0;
-  left: 0;
+  top: 1px;
+  left: 1px;
   z-index: 1;
   width: 1.25em;
   height: 1.25em;
@@ -7669,14 +7647,14 @@ a.category-slug.active {
 .custom-input_label {
   position: relative;
   z-index: 2;
-  padding-left: 1.25em;
+  padding-left: 1.375em;
   margin-right: 0.375em;
   line-height: 1;
 }
 .custom-input_text {
   display: inline-block;
   padding-left: 0.5em;
-  line-height: 1.25;
+  line-height: 1.375;
 }
 .is-hovered .custom-input_checkbox,
 .is-hovered .custom-input_radio,
