--- a/static/css/main.ie.css
+++ b/static/css/main.ie.css
@@ -1536,7 +1536,7 @@ textarea.success {
   display: inline;
   margin-right: 0;
   zoom: 1;
-  behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+  behavior: url('/static/vendor/box-sizing-polyfill/boxsizing.htc');
 }
 
 .input-with-btn_input {
@@ -1560,7 +1560,7 @@ textarea.success {
   display: inline;
   margin-right: 0;
   zoom: 1;
-  behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+  behavior: url('/static/vendor/box-sizing-polyfill/boxsizing.htc');
 }
 
 .input-with-btn_input input {
@@ -1594,7 +1594,7 @@ textarea.success {
   display: inline;
   margin-right: 0;
   zoom: 1;
-  behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+  behavior: url('/static/vendor/box-sizing-polyfill/boxsizing.htc');
 }
 
 .input-with-btn_btn {
@@ -1617,7 +1617,7 @@ textarea.success {
   display: inline;
   margin-right: 0;
   zoom: 1;
-  behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+  behavior: url('/static/vendor/box-sizing-polyfill/boxsizing.htc');
 }
 
 .input-with-btn_btn .btn {
@@ -1671,8 +1671,8 @@ textarea.success {
 
 @font-face {
   font-family: 'CFPB Minicons';
-  src: url('/static/fonts/cf-icons.eot');
-  src: url('/static/fonts/cf-icons.eot?#iefix') format('embedded-opentype'),url('/static/fonts/cf-icons.woff') format('woff'),url('/static/fonts/cf-icons.ttf') format('truetype'),url('/static/fonts/cf-icons.svg') format('svg');
+  src: url('../fonts/cf-icons.eot');
+  src: url('../fonts/cf-icons.eot?#iefix') format('embedded-opentype'),url('../fonts/cf-icons.woff') format('woff'),url('../fonts/cf-icons.ttf') format('truetype'),url('../fonts/cf-icons.svg') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -3471,7 +3471,7 @@ textarea.success {
   display: inline;
   margin-right: 0;
   zoom: 1;
-  behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+  behavior: url('/static/vendor/box-sizing-polyfill/boxsizing.htc');
 }
 
 .content-l_col-1-2 {
@@ -3494,7 +3494,7 @@ textarea.success {
   display: inline;
   margin-right: 0;
   zoom: 1;
-  behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+  behavior: url('/static/vendor/box-sizing-polyfill/boxsizing.htc');
 }
 
 .content-l_col-1-3 {
@@ -3517,7 +3517,7 @@ textarea.success {
   display: inline;
   margin-right: 0;
   zoom: 1;
-  behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+  behavior: url('/static/vendor/box-sizing-polyfill/boxsizing.htc');
 }
 
 .content-l_col-2-3 {
@@ -3540,7 +3540,7 @@ textarea.success {
   display: inline;
   margin-right: 0;
   zoom: 1;
-  behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+  behavior: url('/static/vendor/box-sizing-polyfill/boxsizing.htc');
 }
 
 .content-l_col-3-8 {
@@ -3563,7 +3563,7 @@ textarea.success {
   display: inline;
   margin-right: 0;
   zoom: 1;
-  behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+  behavior: url('/static/vendor/box-sizing-polyfill/boxsizing.htc');
 }
 
 .content-l_col-5-8 {
@@ -3586,7 +3586,7 @@ textarea.success {
   display: inline;
   margin-right: 0;
   zoom: 1;
-  behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+  behavior: url('/static/vendor/box-sizing-polyfill/boxsizing.htc');
 }
 
 .content-l_col__before-divider.content-l_col-1-2 {
@@ -3684,7 +3684,7 @@ textarea.success {
   display: inline;
   margin-right: 0;
   zoom: 1;
-  behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+  behavior: url('/static/vendor/box-sizing-polyfill/boxsizing.htc');
 }
 
 .content_intro,
@@ -3713,7 +3713,7 @@ textarea.success {
   display: inline;
   margin-right: 0;
   zoom: 1;
-  behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+  behavior: url('/static/vendor/box-sizing-polyfill/boxsizing.htc');
 }
 
 .content__1-3 .content_sidebar {
@@ -3737,7 +3737,7 @@ textarea.success {
   display: inline;
   margin-right: 0;
   zoom: 1;
-  behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+  behavior: url('/static/vendor/box-sizing-polyfill/boxsizing.htc');
 }
 
 .content__1-3 .content_main {
@@ -3761,7 +3761,7 @@ textarea.success {
   display: inline;
   margin-right: 0;
   zoom: 1;
-  behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+  behavior: url('/static/vendor/box-sizing-polyfill/boxsizing.htc');
 }
 
 .content__1-3 .content_main:after {
@@ -3793,7 +3793,7 @@ textarea.success {
   display: inline;
   margin-right: 0;
   zoom: 1;
-  behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+  behavior: url('/static/vendor/box-sizing-polyfill/boxsizing.htc');
 }
 
 .content__2-1 .content_main:after {
@@ -3821,7 +3821,7 @@ textarea.success {
   display: inline;
   margin-right: 0;
   zoom: 1;
-  behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+  behavior: url('/static/vendor/box-sizing-polyfill/boxsizing.htc');
 }
 
 .content__flush-bottom {
@@ -6344,7 +6344,7 @@ a.category-slug.active {
   display: inline;
   margin-right: 0;
   zoom: 1;
-  behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+  behavior: url('/static/vendor/box-sizing-polyfill/boxsizing.htc');
 }
 
 a.hero_card {
@@ -6902,7 +6902,7 @@ a.focus .summary_event-date {
   display: inline;
   margin-right: 0;
   zoom: 1;
-  behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+  behavior: url('/static/vendor/box-sizing-polyfill/boxsizing.htc');
 }
 
 .summary_header__large {
@@ -7090,7 +7090,7 @@ a.focus .summary_event-date {
   display: inline;
   margin-right: 0;
   zoom: 1;
-  behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+  behavior: url('/static/vendor/box-sizing-polyfill/boxsizing.htc');
 }
 
 .post_heading {
@@ -8476,7 +8476,7 @@ a.focus .summary_event-date {
   display: inline;
   margin-right: 0;
   zoom: 1;
-  behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+  behavior: url('/static/vendor/box-sizing-polyfill/boxsizing.htc');
 }
 
 .footer-left .footer_general-inqueries {
@@ -8499,7 +8499,7 @@ a.focus .summary_event-date {
   display: inline;
   margin-right: 0;
   zoom: 1;
-  behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+  behavior: url('/static/vendor/box-sizing-polyfill/boxsizing.htc');
 }
 
 .footer-right {
@@ -8535,7 +8535,7 @@ a.focus .summary_event-date {
   display: inline;
   margin-right: 0;
   zoom: 1;
-  behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+  behavior: url('/static/vendor/box-sizing-polyfill/boxsizing.htc');
 }
 
 .footer-right .h6 {
@@ -9774,7 +9774,7 @@ a.focus .summary_event-date {
   display: inline;
   margin-right: 0;
   zoom: 1;
-  behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+  behavior: url('/static/vendor/box-sizing-polyfill/boxsizing.htc');
 }
 
 .error_header {
@@ -10112,7 +10112,7 @@ a.focus .summary_event-date {
   display: inline;
   margin-right: 0;
   zoom: 1;
-  behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+  behavior: url('/static/vendor/box-sizing-polyfill/boxsizing.htc');
 }
 
 .org-chart_branch:before,
@@ -10894,7 +10894,7 @@ a.focus .summary_event-date {
   display: inline;
   margin-right: 0;
   zoom: 1;
-  behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+  behavior: url('/static/vendor/box-sizing-polyfill/boxsizing.htc');
 }
 
 .contact-person__director {
@@ -11063,7 +11063,7 @@ a.focus .summary_event-date {
   display: inline;
   margin-right: 0;
   zoom: 1;
-  behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+  behavior: url('/static/vendor/box-sizing-polyfill/boxsizing.htc');
 }
 
 .demo-col-12 {
@@ -11086,7 +11086,7 @@ a.focus .summary_event-date {
   display: inline;
   margin-right: 0;
   zoom: 1;
-  behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+  behavior: url('/static/vendor/box-sizing-polyfill/boxsizing.htc');
 }
 
 .demo-col-6 {
@@ -11109,7 +11109,7 @@ a.focus .summary_event-date {
   display: inline;
   margin-right: 0;
   zoom: 1;
-  behavior: url('/cfgov-refresh/static/vendor/box-sizing-polyfill/boxsizing.htc');
+  behavior: url('/static/vendor/box-sizing-polyfill/boxsizing.htc');
 }
 
 .header .demo-placeholder,
