--- a/static/css/main.less
+++ b/static/css/main.less
@@ -71,6 +71,10 @@
     &.chosen-container-multi .chosen-choices li.search-choice .search-choice-close {
         top: 3px;
     }
+
+    .chosen-results li {
+        line-height: 1.2;
+    }
 }
 
 
